main/default/objects/Festival_solution__c/Festival_solution__c.object-meta.xml
<CustomObject>
    <label>Festival (solution)</label>
    <nameField>
        <label>Festival Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Festivals (solution)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>