main/default/objects/Festival_solution__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date the festival ends.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>