main/default/objects/Festival_solution__c/fields/GA_Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>GA_Tickets_Sold__c</fullName>
    <label>GA Tickets Sold</label>
    <summarizedField>Attendee_solution__c.Tickets_purchased__c</summarizedField>
    <summaryFilterItems>
        <field>Attendee_solution__c.Ticket_Type__c</field>
        <operation>equals</operation>
        <value>General Admission</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee_solution__c.Festival__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>