main/default/objects/Festival_solution__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the festival is scheduled to start.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>