main/default/objects/Festival_solution__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>Where the festival will be held.</description>
    <label>Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>