main/default/objects/Festival_solution__c/validationRules/Tickets_sold_cannot_exceed_capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Tickets_sold_cannot_exceed_capacity</fullName>
    <active>true</active>
    <description>We can&#39;t sell more tickets than our festival capacity!</description>
    <errorConditionFormula>Total_Tickets_Sold__c  &gt;  Capacity__c</errorConditionFormula>
    <errorMessage>Tickets sold cannot exceed capacity.</errorMessage>
</ValidationRule>